--- a/examples/games/pong/public/style.css
+++ b/examples/games/pong/public/style.css
@@ -37,7 +37,7 @@ canvas {
   cursor: none;
 }
 
-@media (orientation: landscape) and (pointer: coarse) and (hover: none) {
+@media (orientation: landscape) and (pointer: coarse) {
   canvas {
     width: auto;
     height: 100vh;
